--- a/index.html
+++ b/index.html
@@ -12,41 +12,57 @@
 
 <body>
   <header>
-    <section class="navbar">
-      <div class="logo">
-        <a href="./index.html">
-          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-egg-fill" viewBox="0 0 16 16">
-            <path d="M14 10a6 6 0 0 1-12 0C2 5.686 5 0 8 0s6 5.686 6 10z" />
-          </svg>
-          <i class="bi bi-egg-fill">Cakegg</i>
-        </a>
-      </div>
-      <nav class="general">
-        <div class="enlaces">
-          <a href="#">Nosotros</a>
-          <a href="#">Eventos</a>
-          <a href="#">Accesorios</a>
-          <a href="#">Postres</a>
+
+    <nav class="navbar navbar-expand-lg bg-black" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-egg-fill" viewBox="0 0 16 16">
+          <path d="M14 10a6 6 0 0 1-12 0C2 5.686 5 0 8 0s6 5.686 6 10z" />
+        </svg>
+        <i class="bi bi-egg-fill">Cakegg</i></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Nosotros</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Productos
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Pasteles</a></li>
+                <li><a class="dropdown-item" href="#">Gelatinas</a></li>
+                <li><a class="dropdown-item" href="#">Donas</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">accesorios</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="bi bi-cart-fill">Carrito</i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
+                <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
+              </svg></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="bi bi-person-circle">Cuenta</i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+              </svg></a>
+            </li>
+          </ul>
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-dark" type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-search" viewBox="-4 -6 24 28">
+              <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
+            </svg></button>
+          </form>
         </div>
-        <div class="administracion">
-          <a href="#"><i class="bi bi-cart-fill">Carrito</i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-fill" viewBox="0 0 16 16">
-              <path d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .491.592l-1.5 8A.5.5 0 0 1 13 12H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 1 0 2 1 1 0 0 1 0-2zm7 0a1 1 0 1 1 0 2 1 1 0 0 1 0-2z" />
-            </svg></a>
-          <a href="#"><i class="bi bi-person-circle">Cuenta</i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-              <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
-              <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
-            </svg></a>
-        </div>
-      </nav>
-      <div class="busqueda">
-        <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-          <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-search" viewBox="0 -11 24 28">
-            <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
-          </svg>
-        </form>
       </div>
-    </section>
+    </nav>
   </header>
 
   <main>
@@ -215,40 +231,41 @@
   </main>
   
   <footer>
-    <section class="pie-pagina">
-      <div class="tabla-enlaces">
-        <table>
-          <thead>
-            <tr>
-              <th>SERVICIOS</th>
-              <th>COMPRAS EN LINEA</th>
-              <th>EMPRESA</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>CATÁLOGO</td>
-              <td>MI CUENTA</td>
-              <td>¿QUIENES SOMOS?</td>
-            </tr>
-            <tr>
-              <td>ACCESORIOS</td>
-              <td>CARRITO</td>
-              <td>CONTACTO</td>
-            </tr>
-            <tr>
-              <td>EVENTOS</td>
-              <td>ENTREGA A DOMICILIO</td>
-              <td>POLITICA DE PRIVACIDAD</td>
-            </tr>
-            <tr>
-              <td></td>
-              <td>DEVOLUCIONES Y REEMBOLSOS</td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
+    <section class="pie-pagina container-fluid">
+      <div class="text-bg-black mb-3" style="width: 18rem;">
+        <div class="card-header">
+          SERVICIOS
+        </div>
+        <ul class="list-group-item-dark list-group-flush">
+          <li class="list-group">CATÁLOGO</li>
+          <li class="list-group">ACCESORIOS</li>
+          <li class="list-group">EVENTOS</li>
+        </ul>
       </div>
+
+      <div class="text-bg-black mb-3" style="width: 18rem;">
+        <div class="card-header">
+          COMPRAS EN LINEA
+        </div>
+        <ul class="list-group-item-dark list-group-flush">
+          <li class="list-group">MI CUENTA</li>
+          <li class="list-group">CARRITO</li>
+          <li class="list-group">ENTREGAS A DOMICIOLIO</li>
+          <li class="list-group">DEVOLUCIONES Y REEMBOLSOS</li>
+        </ul>
+      </div>
+
+      <div class="text-bg-black mb-3" style="width: 18rem;">
+        <div class="card-header">
+          EMPRESA
+        </div>
+        <ul class="list-group-item-dark list-group-flush">
+          <li class="list-group">¿QUIENES SOMOS?</li>
+          <li class="list-group">CONTACTO</li>
+          <li class="list-group">POLITICA DE PRIVACIDAD</li>
+        </ul>
+      </div>
+
       <div class="redes-sociales">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope-at" viewBox="0 0 16 16">
           <path d="M2 2a2 2 0 0 0-2 2v8.01A2 2 0 0 0 2 14h5.5a.5.5 0 0 0 0-1H2a1 1 0 0 1-.966-.741l5.64-3.471L8 9.583l7-4.2V8.5a.5.5 0 0 0 1 0V4a2 2 0 0 0-2-2H2Zm3.708 6.208L1 11.105V5.383l4.708 2.825ZM1 4.217V4a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v.217l-7 4.2-7-4.2Z"/>
